[package]
name = "nzbrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde-xml-rs = "0.6.0"
async-trait = "0.1.73"
tokio = { version = "1.32", features = ["full"] }
webpki-roots = "0.25.2"
once_cell = "1.18.0"
tokio-rustls = "0.24.1"
bb8 = "0.8.1"
futures = "0.3.28"
positioned-io = "0.3.2"
crc32fast = "1.3.2"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
